--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,13 @@ main{
     border-radius: 5px;
     padding: 33px 30px 42px 30px;
 }
+hr{
+    border: 1px solid #D1D1D1;
+}
 /* top-players-style */
+.top-player{
+    margin-bottom: 30px;
+}
 .section-title{
     color: #562EFF;
     font-size: 24px;
@@ -38,4 +44,36 @@ main{
 .player-name{
     margin-left: 16px;
     font-size: 18px;
+}
+/* to-blog-style */
+.top-blog{
+    margin-bottom: 31px;
+    margin-top: 30px;
+}
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 26px;
+}
+.blog{
+    display:flex;
+}
+.blog .thumbail img{
+    width: 177px;
+    height: 117px;
+}
+.blog-info{
+    margin-left: 16px;
+}
+.blog-title{
+    font-size: 20px;
+}
+.blog-author{
+    font-size: 16px;
+    color: #9F9F9F;
+}
+.blog-author a{
+    text-decoration: none;
+    color: #562EFF;
+
 }
