--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,8 @@ body{
 }
 main{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .container{
     background-color: #FFFFFF;
@@ -15,6 +16,7 @@ main{
     height:679;
     border-radius: 5px;
     padding: 33px 30px 42px 30px;
+    margin-top: 21px;
 }
 hr{
     border: 1px solid #D1D1D1;
@@ -47,7 +49,6 @@ hr{
 }
 /* to-blog-style */
 .top-blog{
-    margin-bottom: 31px;
     margin-top: 30px;
 }
 .blogs{
@@ -76,4 +77,54 @@ hr{
     text-decoration: none;
     color: #562EFF;
 
+}
+
+/* courses styles */
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 24px;
+}
+.course{
+    width: 230px;
+    height: 250px;
+    padding: 5%;
+    box-shadow: 0px 5.34229px 13.3557px rgba(0, 0, 0, 0.05);
+    border-radius: 5px;
+}
+.course .course-banner img{
+    width: 224px;
+    height: 104px;
+}
+.course-title{
+    font-size: 16px;
+}
+.course-author{
+    color: #ED6B4F;
+    font-size: 13px;
+}
+.course-info{
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.star > span{
+    color: #A2A2A2
+    ;
+    margin-left: 10px;
+}
+.fa-star.filled{
+    color: #FFC014
+    ;
+}
+.fa-star.empty{
+    color: #AEAEAE;
+}
+.course-duration,.fa-clock{
+    background-color: #FFE4E8
+    ;
+    color: #FF4A60
+    ;
+    border-radius: 8px;
 }
