--- a/styles/style.css
+++ b/styles/style.css
@@ -128,3 +128,33 @@ hr{
     ;
     border-radius: 8px;
 }
+
+/* Media queries */
+/* mobile device */
+@media only screen and (max-width:688px){
+    
+    .container{
+        width:80%;
+    }
+    .players, .blogs, .courses{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .player, .blog{
+        flex-direction: column;
+    }
+    
+}
+/* tablet version */
+@media only screen and (min-width:689px) and (max-width:992px){
+    .container{
+        width:90%;
+    }
+    .players, .blogs{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .courses{
+        grid-template-columns: repeat(1, 1fr);
+    
+    }
+     
+}
